added core functionality to product-service
