# services/user-service/handlers/signup.go
@@ -12,14 +12,14 @@ import (
 // Signup godoc
 // @Summary      Create a new user
 // @Description  Register a new user account
-// @Tags         Users
+// @Tags         Auth
 // @Accept       json
 // @Produce      json
 // @Param        user  body      models.User  true  "User payload"
 // @Success      201   {object}  map[string]interface{}
 // @Failure      400   {object}  map[string]interface{}
 // @Failure      500   {object}  map[string]interface{}
-// @Router       /users/signup [post]
+// @Router       /auth/signup [post]
 func Signup(context *gin.Context) {
 	var user models.User
 	err := context.ShouldBindJSON(&user)
